--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,6 @@ main, body {
   padding: 0;
   margin: 0;
   background-color: black;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,7 +22,7 @@ main, body {
 }
 
 .container {
-  aspect-ratio: 9 / 16;
+  width: 500px;
   height: 800px;
   display: flex;
   flex-direction: column;
