--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,8 +54,9 @@ main, body {
 
 .text-introduction {
   font-size: 35px;
-  font-weight: 400;
-  
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: -1px;
 }
 
 .text-second {
