--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,36 +5,39 @@
 @tailwind components;
 @tailwind utilities;
 
+@media (max-width: 400px) {
+  .container {
+    
+  }
+}
 
 main, body {
   background: black;
 }
 
 .root {
-  padding: 0;
-  margin: 0;
   background-color: black;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
 }
 
 .container {
   max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
   opacity: 0;
   transition: 1s;
-}
-
-.justify {
   justify-content: center;
   align-items: center;
 }
+
+.video {
+  margin-top: 30px;
+}
+
 
 .fadeIn {
   opacity: 1;
@@ -48,7 +51,6 @@ main, body {
 
 .text-introduction, .text-second, .text-third {
   color: white;
-  text-align: center;
   margin-top: 30px;
   margin-bottom: 40px;
 }
