--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 
 @media (max-width: 400px) {
   .container {
-    
+    margin-left: 50px;
   }
 }
 
@@ -23,7 +23,7 @@ main, body {
 }
 
 .container {
-  max-width: 400px;
+  max-width: 600px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
