--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -60,7 +61,7 @@ body {
   font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 0px;
-  font-family: 'Langar', cursive;
+  font-family: 'Amatic Sc', cursive;
 }
 
 .text-second {
