--- a/styles/globals.css
+++ b/styles/globals.css
@@ -209,3 +209,31 @@ body {
   color: white;
   margin: 30px;
 }
+
+.chat-box {
+  margin: 20px;
+  width: 350px;
+  padding: 40px;
+  border-radius: 10px;
+  background-color: rgb(60, 60, 60);
+  
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  font-size: 13px;
+  font-weight: 300;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 400px;
+}
+
+.my-message {
+  padding: 10px;
+  border-radius: 10px;
+  margin: 20px;
+  float: left;
+  color: rgb(206, 206, 206);
+  align-self: center;
+  border-radius: 15px;
+}
