--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,7 +64,7 @@ body {
 .video {
   margin-top: 30px;
   box-shadow: 1px 1px 100px 1px rgb(92, 92, 92);
-  border: 1px solid grey;
+  border-radius: 5px;
 }
 
 .icon {
