--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,15 @@ body {
   text-transform: uppercase;
   letter-spacing: 0px;
   font-family: 'Amatic Sc', cursive;
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.text-introduction:hover {
+  background-color: grey;
+  animation: button 0.2s;
+  transition: 0.2s;
 }
 
 .text-second {
@@ -124,6 +133,16 @@ body {
 
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes button {
+  0% {
+    background-color: rgba(128, 128, 128, 0);
+  }
+
+  100% {
+    background-color: rgba(128, 128, 128, 1);
   }
 }
 
